pkg/lang/testdata/ub/config/invalid/input-call-in-list.ub
factory: {
  inputs: { x: [1, pick()] }
}
